--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Calculator</title>
 </head>
 <body>
-    <main>
+    <main class="princ">
         <form action="" name="Calc">
             <input type="text" class="text_maincolor" name="text1" disabled="disabled">
             <input type="text" class="text1_maincolor" name="text12" value="C" onclick="location.reload()"><br>
